hphp/hack/test/typecheck/return_mismatch/return_with_and_without_expr.php.exp
File "return_with_and_without_expr.php", line 5, characters 8-83:
This function can exit with and without returning a value (Typing[4421])
  File "return_with_and_without_expr.php", line 7, characters 7-16:
  Returning a value here.
  File "return_with_and_without_expr.php", line 9, characters 7-13:
  Returning without a value here
